[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python_pulumi_helm"
authors = [
    {name = "Luis Miguel Sáez"},
]
description = "https://github.com/luismiguelsaez/python-pulumi-helm"
requires-python = ">=3.7"
keywords = ["pulumi", "helm", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  'pulumi-kubernetes>=4.1.1,<5.0.0',
  'pulumi>=3.82.0,<4.0.0',
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "python_pulumi_helm.VERSION"}
readme = {file = ["README.md"]}
